--- a/server/package.json
+++ b/server/package.json
@@ -7,26 +7,35 @@
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
-    "test": "jest"
+    "test": "jest",
+    "db:status": "node src/scripts/db-manager.js status",
+    "db:seed": "node src/scripts/db-manager.js seed",
+    "db:clear": "node src/scripts/db-manager.js clear --force",
+    "db:stats": "node src/scripts/db-manager.js stats",
+    "db:users": "node src/scripts/db-manager.js users",
+    "db:rooms": "node src/scripts/db-manager.js rooms",
+    "db:backup": "node src/scripts/db-manager.js backup",
+    "db:create-admin": "node src/scripts/db-manager.js create-admin"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.5",
-    "mongoose": "^8.0.3",
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "commander": "^11.1.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
-    "uuid": "^9.0.1",
-    "axios": "^1.6.2",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
-    "compression": "^1.7.4",
-    "morgan": "^1.10.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
+    "morgan": "^1.10.0",
+    "socket.io": "^4.7.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2"
   },
   "keywords": [
     "collaborative-coding",
